simplify setupVariables to use jhipster config if possible

--- a/generators/app/templates/README.md.ejs
+++ b/generators/app/templates/README.md.ejs
@@ -1,4 +1,4 @@
-# <%= reactNativeAppName %>
+# <%= context.reactNativeAppName %>
 
 - React Native app generated with [JHipster React Native](https://github.com/ruddell/jhipster-react-native). See the JHipster React Native docs for more details regarding this boilerplate.
 
@@ -8,7 +8,7 @@
 
 **Step 2:** cd to the cloned repo:
 
-**Step 3:** Install the Application with `<%= useNpm ? 'npm' : 'yarn' %> install`
+**Step 3:** Install the Application with `npm install`
 
 ## :arrow_forward: How to Run App
 
