--- a/generators/app/templates/app/shared/services/fixture-api.js.ejs
+++ b/generators/app/templates/app/shared/services/fixture-api.js.ejs
@@ -35,7 +35,7 @@ export default {
   removeAuthToken: () => {
 
   },
-  <%_ if (authType === 'jwt') { _%>
+  <%_ if (context.authenticationType === 'jwt') { _%>
   login: (authObj) => {
     if (authObj.username === 'user' && authObj.password === 'user') {
       return {
@@ -50,7 +50,7 @@ export default {
       }
     }
   },
-  <%_ } else if (authType === 'oauth2') { _%>
+  <%_ } else if (context.authenticationType === 'oauth2') { _%>
   getOauthInfo: () => {
     return {
       ok: true,
