--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -52,6 +52,7 @@
     "expo-splash-screen": "REPLACE_WITH_VERSION",
     "formik": "REPLACE_WITH_VERSION",
     "@react-native-community/datetimepicker": "REPLACE_WITH_VERSION",
+    "@react-native-picker/picker": "REPLACE_WITH_VERSION",
     "react-datepicker": "REPLACE_WITH_VERSION",
     "react-native-modal-datetime-picker": "REPLACE_WITH_VERSION",
     "react-native-picker-select": "REPLACE_WITH_VERSION",
@@ -73,6 +74,7 @@
     "@react-native-community/eslint-config": "REPLACE_WITH_VERSION",
     "babel-jest": "REPLACE_WITH_VERSION",
     "jest": "REPLACE_WITH_VERSION",
+    "expect": "REPLACE_WITH_VERSION",
     "jest-expo": "REPLACE_WITH_VERSION",
     "eslint": "REPLACE_WITH_VERSION",
     "eslint-config-prettier": "REPLACE_WITH_VERSION",
