--- a/generators/app/templates/app/shared/util/date-transforms.js.ejs
+++ b/generators/app/templates/app/shared/util/date-transforms.js.ejs
@@ -1,5 +1,5 @@
 export const jsDateToLocalDate = (date) => {
-  if (!date || !date.getMonth) {
+  if (!date || !date.getYear) {
     return ''
   }
   return ('0' + (date.getMonth() + 1).toString()).substr(-2) + '/' + ('0' + date.getDate().toString()).substr(-2) + '/' + (date.getFullYear().toString()).substr(2)
